force-app/main/default/objects/AutocompleteField__mdt/AutocompleteField__mdt.object-meta.xml
<CustomObject>
    <label>Campo de preenchimento automático</label>
    <pluralLabel>Campos de preenchimento automático</pluralLabel>
</CustomObject>