force-app/main/default/objects/AutocompleteField__mdt/fields/QueryFields__c.field-meta.xml
<CustomField>
    <fullName>QueryFields__c</fullName>
    <description>Campo de listagem para o sistema preencher o campo alvo com base na alteração de qualquer um desses campos</description>
    <inlineHelpText>Digite os campos que ao realizar a alteração, você deseja que preencha o campo alvo com a data da modificação</inlineHelpText>
    <label>Campos de Consulta</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>