force-app/main/default/objects/AutocompleteField__mdt/fields/QueryFieldValues__c.field-meta.xml
<CustomField>
    <fullName>QueryFieldValues__c</fullName>
    <label>Valores dos campos de consulta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>