force-app/main/default/objects/AutocompleteField__mdt/fields/TargetFields__c.field-meta.xml
<CustomField>
    <fullName>TargetFields__c</fullName>
    <label>Campos Alvo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>